# mecagent

./: .env.example  .gitignore  Readme_v2.MD  Report.MD  pyproject.toml
data/metrics/baseline/: baseline_metrics.txt
data/metrics/improved/: improved_metrics.txt
src/: config.py
src/scripts/baseline/: __init__.py  evaluate.py  predict.py  train.py
src/utils/: gencad_dataset.py  logging.py
tests/: test_baseline_model.py  test_gencad_dataset.py
